Fix horizon on mobile

--- a/index.css
+++ b/index.css
@@ -5,13 +5,19 @@
     --moon-radius: 24px;
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 /* Rotating orbiting circle */
 .orbit-container {
     position: fixed;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
+    width: 100vw;
+    height: 100vh;
     z-index: -1;
 
     &.orbit-container-up {
@@ -146,6 +152,11 @@ a:hover {
 .horizon {
     grid-area: main;
     width: 100%;
+
+    hr {
+        margin: 0;
+        padding: 0;
+    }
 }
 
 .links {
